@@ -37,5 +37,6 @@ GENERAL_SRCS = 		\
 	SDL_error_c.h		\
 	SDL_fatal.c		\
 	SDL_fatal.h		\
-	SDL_getenv.c
+	SDL_getenv.c		\
+	SDL_loadso.c
 
