@@ -4,6 +4,8 @@
 noinst_LTLIBRARIES = libaudio_arts.la
 libaudio_arts_la_SOURCES = $(SRCS)
 
+arts_lib = \"@arts_lib@\"
+
 # The SDL audio driver sources
 SRCS =	SDL_artsaudio.c	\
 	SDL_artsaudio.h
