@@ -4,6 +4,8 @@
 noinst_LTLIBRARIES = libaudio_esd.la
 libaudio_esd_la_SOURCES = $(SRCS)
 
+esd_lib = \"@esd_lib@\"
+
 # The SDL audio driver sources
 SRCS =	SDL_esdaudio.c	\
 	SDL_esdaudio.h
