@@ -4,6 +4,12 @@ This is a list of API changes in SDL's version history.
 Version 1.0:
 
 1.2.4:
+	Added a new header file: SDL_loadso.h
+	It contains the following functions:
+		SDL_LoadObject(), SDL_LoadFunction(), SDL_UnloadObject()
+	The UNIX esd and arts audio code use these to dynamically load
+	their respective audio libraries.
+
 	Added SDL_LockRect() and SDL_UnlockRect() to lock a portion of a
 	surface.  This may be more efficient than a full lock if you are
 	using a hardware surface and plan to make a few changes to small
